# reddit-comment-bot

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt
config/clients/: example-client.yaml
examples/: brand.example.json  playbooks.example.json
scripts/: dev.sh  setup-data.sh
src/api/: __init__.py  main.py  schemas.py  storage.py
src/api/routes/: brand.py  generate.py  history.py  playbooks.py  tracker.py
src/bot/: __init__.py  cli.py  config.py  db.py  generation.py  llm.py  models.py  orchestrator.py  prompts.py  reddit.py  safety.py  settings.py
tests/: test_api.py  test_safety.py
web/: index.html  package-lock.json  package.json
web/src/: App.tsx  index.css  types.ts
web/src/api/: client.ts
web/src/components/: Layout.tsx
web/src/pages/: Brand.tsx  Generator.tsx  History.tsx  Playbooks.tsx  Tracker.tsx
